modified home page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,7 +6,6 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
-
 
 body {
   background: #262626;
@@ -23,7 +22,7 @@ body {
 
 .name__header {
   white-space: nowrap;
-  color: #FFF;
+  color: #fff;
 }
 
 .name__header li {
@@ -43,19 +42,19 @@ body {
 }
 
 .name__header li:nth-of-type(2) {
-  animation-delay: .2s;
+  animation-delay: 0.2s;
 }
 
 .name__header li:nth-of-type(3) {
-  animation-delay: .4s;
+  animation-delay: 0.4s;
 }
 
 .name__header li:nth-of-type(4) {
-  animation-delay: .6s;
+  animation-delay: 0.6s;
 }
 
 .name__header li:nth-of-type(5) {
-  animation-delay: .8s;
+  animation-delay: 0.8s;
 }
 
 .name__header li:nth-of-type(6) {
@@ -115,8 +114,15 @@ body {
   overflow: hidden;
   align-items: center;
   text-align: left;
-  background: linear-gradient(to right, rgb(39, 39, 39) 0%, rgba(39, 39, 39, 0.9724264706) 45%, rgba(39, 39, 39, 0.3533788515) 100%), url("../../img/model.jpg") center right;
-  background-size: cover;
+  background: linear-gradient(
+      to right,
+      rgb(39, 39, 39) 0%,
+      rgba(39, 39, 39, 0.9724264706) 45%,
+      rgba(39, 39, 39, 0.3533788515) 100%
+    ),
+    url("../../img/hero.png") center right;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .home__greetings {
@@ -281,7 +287,12 @@ body {
 .about .about__bio-image {
   height: 75vh;
   width: 100%;
-  background: linear-gradient(90deg, rgba(39, 39, 39, 0.8492647059) 0%, rgba(39, 39, 39, 0.5019257703) 100%), url("../../img/model-mobile.jpg") center;
+  background: linear-gradient(
+      90deg,
+      rgba(39, 39, 39, 0.8492647059) 0%,
+      rgba(39, 39, 39, 0.5019257703) 100%
+    ),
+    url("../../img/model-mobile.jpg") center;
   background-size: cover;
   background-position: 68% 40%;
   display: flex;
@@ -362,7 +373,12 @@ body {
 .projects .projects__bio-image {
   height: 30vh;
   width: 100%;
-  background: linear-gradient(90deg, rgba(39, 39, 39, 0.8492647059) 0%, rgba(39, 39, 39, 0.5019257703) 100%), url("../../img/model-mobile.jpg") center;
+  background: linear-gradient(
+      90deg,
+      rgba(39, 39, 39, 0.8492647059) 0%,
+      rgba(39, 39, 39, 0.5019257703) 100%
+    ),
+    url("../../img/model-mobile.jpg") center;
   background-size: cover;
   background-position: 68% 31%;
   display: flex;
@@ -496,7 +512,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: left;
-  background: linear-gradient(to right, rgb(39, 39, 39) 0%, rgba(39, 39, 39, 0.9724264706) 45%, rgba(39, 39, 39, 0.3533788515) 100%), url("../../img/model.jpg") center right;
+  background: linear-gradient(
+      to right,
+      rgb(39, 39, 39) 0%,
+      rgba(39, 39, 39, 0.9724264706) 45%,
+      rgba(39, 39, 39, 0.3533788515) 100%
+    ),
+    url("../../img/model.jpg") center right;
   background-size: cover;
 }
 
@@ -532,10 +554,15 @@ body {
 }
 
 @media screen and (max-width: 900px) {
-
   .home,
   .contact {
-    background: linear-gradient(90deg, rgb(39, 39, 39) 0%, rgba(39, 39, 39, 0.868872549) 27%, rgba(39, 39, 39, 0.1545868347) 100%), url("../../img/model-mobile.jpg") center;
+    background: linear-gradient(
+        90deg,
+        rgb(39, 39, 39) 0%,
+        rgba(39, 39, 39, 0.868872549) 27%,
+        rgba(39, 39, 39, 0.1545868347) 100%
+      ),
+      url("../../img/model-mobile.jpg") center;
     background-size: cover;
     background-position: 68% 40%;
   }
@@ -582,7 +609,6 @@ body {
     visibility: visible;
     background: #272727;
   }
-
 
   .nav .menu-nav {
     display: block;
