--- a/public/css/main.css
+++ b/public/css/main.css
@@ -282,6 +282,7 @@ body {
 
 .about {
   padding-bottom: 2rem;
+  margin-top: 10%;
 }
 
 .about .about__bio-image {
@@ -309,6 +310,12 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.keyword {
+  background-color: #72e713;
+  color: #000;
+  font-weight: bold;
 }
 
 .about__bio .text-secondary {
