--- a/public/css/main.css
+++ b/public/css/main.css
@@ -316,6 +316,8 @@ body {
   background-color: #72e713;
   color: #000;
   font-weight: bold;
+  border-radius: 8px;
+  padding: 0 4px;
 }
 
 .about__bio .text-secondary {
